fix(Tooptip): z-index & add Text fix(Hint): optional tooltip & add Text fix(Button): height & padding

--- a/src/components/Button/style.scss
+++ b/src/components/Button/style.scss
@@ -7,6 +7,7 @@
   gap: 0.5rem;
   font-size: 0.875rem;
   border-radius: 0.625rem;
+  padding: 0 1.25rem;
   cursor: pointer;
   transition: .3s;
   white-space: nowrap;
@@ -17,16 +18,16 @@
 
 %size {
   &[data-size="xs"] {
-    padding: 0.72rem 1.25rem;
+    height: 2.5rem;
   }
 
   &[data-size="sm"] {
-    padding: 1.03rem 1.25rem;
+    height: 3.125rem;
     border-radius: 0.5rem;
   }
 
   &[data-size="md"] {
-    padding: 1.28rem 1.25rem;
+    height: 3.75rem;
     font-size: 1rem;
   }
 }
